migrate(java21): clean --release 21 (no source changes) + fill MIGRATION.md (2a)
Hop 2 (Java 17 → 21), language/runtime only — NO Spring Boot major. The codebase
uses none of the Java 17→21 removed/deprecated-for-removal APIs (no
Thread.stop/suspend/resume, no finalize(), no SecurityManager, no
SSLSession.getPeerCertificateChain, no sun.*/com.sun.*), so no source edit was
required; confirmed a clean --release 21 build with 42/42 tests passing.

Fills the scaffolded MIGRATION.md playbook (REF-02 artifact): by-hand/no-OpenRewrite
approach, per-hop recipe sequence, both checkpoints' gate results, lessons, and the
Java 25 repeat instructions.

Co-Authored-By: Claude Opus 4.8 (1M context) <noreply@anthropic.com>